--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,16 @@ google-auth-httplib2==0.2.0
 googleapis-common-protos==1.70.0
 httplib2==0.22.0
 idna==3.10
+iniconfig==2.1.0
+packaging==25.0
+pluggy==1.5.0
 proto-plus==1.26.1
 protobuf==6.30.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.3
+pytest==8.3.5
+pytest-mock==3.14.0
 python-dotenv==1.1.0
 requests==2.32.3
 rsa==4.9.1
