--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ pytest==8.3.5
 pytest-mock==3.14.0
 python-dotenv==1.1.0
 requests==2.32.3
+returns==0.25.0
 rsa==4.9.1
+typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
