--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+boto3==1.38.16
+botocore==1.38.16
 cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
+gitdb==4.0.11
+GitPython==3.1.41
 google-api-core==2.24.2
 google-api-python-client==2.169.0
 google-auth==2.40.1
@@ -9,6 +13,7 @@ googleapis-common-protos==1.70.0
 httplib2==0.22.0
 idna==3.10
 iniconfig==2.1.0
+jmespath==1.0.1
 packaging==25.0
 pluggy==1.5.0
 proto-plus==1.26.1
@@ -18,10 +23,15 @@ pyasn1_modules==0.4.2
 pyparsing==3.2.3
 pytest==8.3.5
 pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 requests==2.32.3
 returns==0.25.0
 rsa==4.9.1
+s3transfer==0.12.0
+setuptools==69.0.3
+six==1.17.0
+smmap==5.0.1
 typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
