Switch to use poetry

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install --user -r requirements.txt",
+	"postCreateCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}; sh .devcontainer/setup.sh",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
