--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,17 @@ google-oauth2-tool==0.0.3
 googleapis-common-protos==1.70.0
 httplib2==0.22.0
 idna==3.10
+iniconfig==2.1.0
 jmespath==1.0.1
 oauth2client==4.1.3
+packaging==25.0
+pluggy==1.6.0
 proto-plus==1.26.1
 protobuf==6.31.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.3
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 requests==2.32.3
