--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.3
 pytest==8.3.5
+pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 requests==2.32.3
