--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,25 @@
-boto3==1.38.17
-botocore==1.38.17
-bpmn-cwp-verify @ file:///Users/tyklabacka/Desktop/spreadsheet_automation
 cachetools==5.5.2
-certifi==2025.4.26
+certifi==2025.6.15
 charset-normalizer==3.4.2
-dotenv==0.9.9
-google-api-core==2.24.2
-google-api-python-client==2.169.0
-google-auth==2.40.1
+gitdb==4.0.12
+GitPython==3.1.41
+google-api-core==2.25.1
+google-api-python-client==2.173.0
+google-auth==2.40.3
 google-auth-httplib2==0.2.0
-google-oauth2-tool==0.0.3
 googleapis-common-protos==1.70.0
 httplib2==0.22.0
 idna==3.10
-iniconfig==2.1.0
-jmespath==1.0.1
-oauth2client==4.1.3
-packaging==25.0
-pluggy==1.6.0
 proto-plus==1.26.1
-protobuf==6.31.0
+protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.3
-pytest==8.3.5
-pytest-mock==3.14.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-requests==2.32.3
+requests==2.32.4
 returns==0.25.0
 rsa==4.9.1
-s3transfer==0.12.0
-six==1.17.0
-typing_extensions==4.13.2
-uritemplate==4.1.1
-urllib3==2.4.0
+setuptools==75.6.0
+smmap==5.0.2
+typing_extensions==4.14.0
+uritemplate==4.2.0
+urllib3==2.5.0
