--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 cachetools==5.5.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
+dotenv==0.9.9
 gitdb==4.0.12
 GitPython==3.1.41
 google-api-core==2.25.1
@@ -15,6 +16,7 @@ protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.3
+python-dotenv==1.1.0
 requests==2.32.4
 returns==0.25.0
 rsa==4.9.1
